--- a/pre-challenge/pre-challenge-3-1/index.html
+++ b/pre-challenge/pre-challenge-3-1/index.html
@@ -7,7 +7,7 @@
     <title>pre-challenge-3-1</title>
   </head>
   <body>
-    <div id="container"></div>
+    <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
